Clipboard landing page

--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
             </div>
         </header>
 
-        <section class="snippets-tracker">
+        <div class="snippets-tracker">
             <h2 class="snippets-tracker__title">Keep track of your snippets</h2>
             <p class="snippets-tracker__description">
                 Clipboard instantly stores any item you copy in the cloud,
                 meaning you can access your snippets immediately on all your
                 devices. Our Mac and iOS apps will help you organize everything.
             </p>
-        </section>
+        </div>
 
-        <section class="features-grid">
+        <div class="features-grid">
             <div class="features-grid__image-wrapper">
                 <img src="/images/image-computer.png" alt="Computer monitor showing Quick Search" class="features-grid__image">
             </div>
@@ -60,23 +60,23 @@
                     </p>
                 </div>
             </div>
-        </section>
+        </div>
 
-        <section class="access-anywhere">
+        <div class="access-anywhere">
             <h2 class="access-anywhere__title">Access Clipboard anywhere</h2>
             <p class="access-anywhere__description">
                 Whether you’re on the go, or at your computer, you can access all your Clipboard
                 snippets in a few simple clicks.
             </p>
             <img src="/images/image-devices.png" alt="Multiple devices showing app interface" class="access-anywhere__image">
-        </section>
+          </div>
 
-        <section class="workflow-header">
+        <div class="workflow-header">
             <h2 class="workflow-header__title">Supercharge your workflow</h2>
             <p class="workflow-header__description">We’ve got the tools to boost your productivity.</p>
-        </section>
+        </div>
 
-        <section class="workflow-tools-grid">
+        <div class="workflow-tools-grid">
             <div class="tool-card">
                 <img class="tool-card__icon" src="/images/icon-blacklist.svg" alt="Blacklist Icon">
                 <h3 class="tool-card__title">Create blacklists</h3>
@@ -95,17 +95,17 @@
                 <p class="tool-card__description">Quick preview of all snippets on your Clipboard for easy access.
                 </p>
             </div>
-        </section>
+        </div>
 
-        <section class="partners-logos">
+        <div class="partners-logos">
             <img src="/images/logo-google.png" alt="Google Logo">
             <img src="/images/logo-ibm.png" alt="IBM Logo">
             <img src="/images/logo-microsoft.png" alt="Microsoft Logo">
             <img src="/images/logo-hp.png" alt="HP Logo">
             <img src="/images/logo-vector-graphics.png" alt="Vector Graphics Logo">
-        </section>
+        </div>
 
-        <section class="final-cta">
+        <div class="final-cta">
             <h2 class="final-cta__title">Clipboard for iOS and Mac OS</h2>
             <p class="final-cta__description">
                 Available for free on the App Store. Download for Mac or iOS, sync with iCloud
@@ -113,7 +113,7 @@
             </p>
             <a class="button button--ios" href="#">Download for iOS</a>
             <a class="button button--mac" href="#">Download for Mac</a>
-        </section>
+          </div>
     </div>
 
     <footer class="site-footer">
